# zk-explorations

./: .gitignore  Cargo.toml  README.md  benchmarks.md
arecibo/: Cargo.toml  README.md
arecibo/benches/: poseidon.rs
arecibo/src/: calculation.rs  error.rs  lib.rs  poseidon_chain_hash_proof.rs  public_params.rs
halo2/: README.md
halo2-bench/: Cargo.toml  README.md
halo2-bench/src/: aggregation.rs  main.rs  mycircuit.rs  recursion.rs  simple_example.rs
halo2-common/: Cargo.toml
halo2-common/src/: lib.rs
halo2-complex/: Cargo.toml  README.md
halo2-complex/src/: circuit.rs  main.rs
halo2-gwc/: Cargo.toml
halo2-gwc/benches/: poseidon.rs
halo2-gwc/src/: lib.rs  main.rs
halo2-shplonk/: Cargo.toml
halo2-shplonk/benches/: poseidon.rs
halo2-shplonk/src/: lib.rs  main.rs
halo2/src/: main.rs
nova-bellman/: Cargo.toml  README.md
nova-bellman/benches/: poseidon.rs
nova-bellman/src/: calculation.rs  error.rs  lib.rs  poseidon_chain_hash.rs  poseidon_chain_hash_proof.rs  public_params.rs  tests.rs
nova-bench/: Cargo.toml  README.md
nova-bench/benches/: poseidon.rs
nova-bench/examples/: poseidon.rs
nova-bench/examples/poseidon/circom/: README.md  compile2.sh  compile_pallas.sh  compile_vesta.sh  input_32_first_step.json  input_32_first_step2.json  poseidon_bytes.circom  poseidon_test_nova.circom  poseidon_test_nova2.circom
nova-bench/src/: lib.rs
nova-vdf/: .gitignore  Cargo.toml
nova-vdf/src/: error.rs  lib.rs  minroot.rs  public_params.rs  tests.rs  vdf_proof.rs
novanacci/: Cargo.toml  README.md
novanacci/src/: circuit.rs  main.rs  prove_verify.rs
plonky2-bench/: Cargo.toml  README.md
plonky2-bench/benches/: poseidon.rs
plonky2-bench/src/: common.rs  lib.rs  main.rs  recursion.rs
plonky3-bench/: Cargo.toml  README.md
plonky3-bench/examples/: prove_goldilocks_poseidon.rs
poseidon-starky/: Cargo.toml  README.md  rust-toolchain.toml
poseidon-starky/benches/: poseidon_starky.rs
poseidon-starky/src/: columns.rs  generation.rs  lib.rs  stark.rs
risc0/: README.md
risc0-complex/checker/: Cargo.toml
risc0-complex/checker/src/: main.rs
risc0-complex/core/: Cargo.toml
risc0-complex/core/src/: lib.rs
risc0-complex/host/src/: main.rs
risc0-complex/methods/: Cargo.toml
risc0-complex/methods/guest/: Cargo.toml
risc0/host/src/: main.rs
src/: circuit.rs  main.rs
