[package]
name = "halo2_exploration"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vacp2p/zk-explorations"

[dependencies]
backtrace = { version = "0.3", optional = true }
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
maybe-rayon = {version = "0.1.0", default-features = false}
halo2_proofs = { git = "https://github.com/zcash/halo2", rev = "b60e9a4eb6632da1c7d67ffc68d2137450c76bb3" }

# Developer tooling dependencies
plotters = { version = "0.3.0", default-features = false, optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["batch", "multicore"]
multicore = ["maybe-rayon/threads"]
batch = ["rand_core/getrandom"]
