[package]
name = "halo2-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2curves = {git = "https://github.com/privacy-scaling-explorations/halo2curves", branch = "main"}
snark-verifier = {git = "https://github.com/privacy-scaling-explorations/snark-verifier", branch = "main"}
#anyhow = "1.0.71"
halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", branch = "main" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", branch = "main" }
rand = "0.8"
