[package]
name = "halo2-gwc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
rand = "0.8"
rand_chacha = "0.3.1"

halo2_gadgets = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" } # not optional for now
pasta_curves = "0.5"
ff = "0.13"

snark-verifier = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git" , default-features = false }
snark-verifier-sdk = { git = "https://github.com/privacy-scaling-explorations/snark-verifier.git" }

# system_halo2
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_04_20" } # not optional for now
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }  # must be same version as in halo2_proofs
halo2-common = {path = "../halo2-common"}

# loader_halo2
halo2_wrong_ecc = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_04_20", package = "ecc", optional = true }
poseidon = { git = "https://github.com/privacy-scaling-explorations/poseidon", tag = "v2023_04_20", optional = true }

ark-std = { version = "0.3.0", features = ["print-trace"] }
paste = "1.0.7"

[features]
default = ["loader_halo2", "derive_serde", "display"]
display = []
loader_halo2 = [
    "snark-verifier/system_halo2",
    "snark-verifier/loader_halo2",
    "dep:halo2_wrong_ecc",
    "dep:poseidon",
]
parallel = ["snark-verifier/parallel"]
derive_serde = ["snark-verifier/derive_serde", "halo2curves/derive_serde"]
halo2_circuit_params = ["snark-verifier/halo2_circuit_params"]
