[package]
name = "nova-vdf"
version = "0.1.0"
edition = "2021"

[dependencies]
bellperson = { version = "=0.25", default-features = false }
crossbeam = "=0.8.2"
ff = "=0.13.0"
generic-array = "=0.14.7"
merlin = "=2.0.1"
neptune = { version = "=9.0.0", default-features = false }
nova = { package = "nova-snark", version = "=0.21", default-features = false }
pairing = "=0.21.0"
pasta_curves = { version = "=0.5.1", features = ["repr-c", "serde"]}
pasta-msm = "=0.1.4"
rand = "=0.8.5"
subtle = "=2.5.0"

[dev-dependencies]
criterion = "0.3"
rand_xorshift = "0.3.0"
